--- a/index.html
+++ b/index.html
@@ -78,13 +78,147 @@
   <!-- MAIN SECTION -->
 
   <main>
+    <section id="hero-section" class="container">
+      <div class="hero-section-content">
+        <h1 class="hero-main-heading">Welcome to <br /> Our Fruits Shop</h1>
+        <p class="hero-main-para">There are many variations of passages of Lorem Ipsum available, but the majority have
+          suffered alteration in
+          some form, by injected humour, or randomised words which don't look even slightly believable</p>
+        <div class="hero-btn-box">
+          <a href="#" class="btn ">shop now</a>
+          <a href="#" class="btn contact-btn">contact us</a>
+        </div>
+      </div>
+      <div class="hero-section-image">
+        <img src="./public/images/slide-img.png" alt="hero-image-fruits">
+      </div>
+    </section>
 
+    <section id="our-services" class="container">
+
+      <h2 class="our-service-main-heading">our services</h2>
+      <p class="our-service-main-para">There are many variations of passages of Lorem Ipsum available, but the majority
+        have</p>
+
+
+      <div class="product-des-card-container">
+        <div class="product-des-card">
+          <img src="/images/card-item-1.png" alt="">
+          <h3>Orange</h3>
+          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+            in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+        </div>
+        <div class="product-des-card">
+          <img src="/images/card-item-2.png" alt="">
+          <h3>Grapes</h3>
+          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+            in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+        </div>
+        <div class="product-des-card">
+          <img src="/images/card-item-3.png" alt="">
+          <h3>Guava</h3>
+          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+            in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+        </div>
+      </div>
+
+
+      <div class="know-more-btn-box">
+        <a href="#" class="btn know-more ">know more</a>
+      </div>
+
+    </section>
+
+    <section id="fruit-buying-section" class="container">
+      <h3>Fresh fruits</h3>
+      <p class="fruit-buying-para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex, tempora molestias.</p>
+      <div class="fruit-buying-card-container">
+        <!-- DYNAMICALLY ADD CONTENT USING JS -->
+      </div>
+
+      <div class="cart-tab">
+        <h4 class="cart-heading">Your cart</h4>
+        <div class="cart-items">
+
+        </div>
+        <h5 class="total-price">Total : ₹0.00</h5>
+        <div class="cart-btn-box">
+          <button class="btn close">close</button>
+          <button class="btn payment">payment</button>
+        </div>
+      </div>
+
+    </section>
+
+    <section id="very-tasty-fruit-section">
+      <img src="./public/images/tasty-image.png" alt="">
+      <h4 class="tasty-fruit-heading-flow">very tasty fruits</h4>
+    </section>
+
+    <section id="testimonial-section" class="container">
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <div class="testimonial-card">
+              <img src="./public/images/client.png" alt="">
+              <h4>John Sasmal</h4>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quos quasi accusantium commodi
+                vel! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi perspiciatis libero expedita.
+              </p>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="testimonial-card">
+              <img src="./public/images/client.png" alt="">
+              <h4>Chandranath</h4>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quos quasi accusantium commodi
+                vel! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis, nihil iste.</p>
+            </div>
+          </div>
+
+        </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+      </div>
+    </section>
+
+    <section id="contact-us" class="container">
+      <div class="contact-us-content">
+        <h2>contact us</h2>
+
+        <form action="#">
+          <input type="text" name="username" id="username" class="input-cmn" placeholder="Name">
+          <input type="tel" name="phnumber" id="phnumber" class="input-cmn" placeholder="Phone Number">
+          <input type="email" name="uemail" id="uemail" class="input-cmn" placeholder="Email">
+          <textarea name="message" id="message" class="input-cmn" placeholder="Message"></textarea>
+        </form>
+      </div>
+
+      <div class="contact-us-image">
+        <img src="/images/orange-dish.png" alt="">
+      </div>
+    </section>
   </main>
 
   <!-- FOOTER SECTION -->
 
 
-  <footer>
+  <footer id="footer" class="container">
+
+    <div class="follow-section">
+      <span>Follow Us</span>
+
+      <div class="social-icon-box">
+        <img src="./public/images/fb.png" alt="">
+        <img src="./public/images/linkedin.png" alt="">
+        <img src="./public/images/instagram.png" alt="">
+        <img src="./public/images/twitter.png" alt="">
+      </div>
+    </div>
+
+
+    <p class="cpy-right">All rights reserved 2025(demo)</p>
+
 
   </footer>
 
