--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
       </div>
       <div class="hero-section-image">
-        <img src="./public/images/slide-img.png" alt="hero-image-fruits">
+        <img src="images/slide-img.png" alt="hero-image-fruits">
       </div>
     </section>
 
@@ -151,7 +151,7 @@
     </section>
 
     <section id="very-tasty-fruit-section">
-      <img src="./public/images/tasty-image.png" alt="">
+      <img src="images/tasty-image.png" alt="">
       <h4 class="tasty-fruit-heading-flow">very tasty fruits</h4>
     </section>
 
@@ -160,7 +160,7 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="testimonial-card">
-              <img src="./public/images/client.png" alt="">
+              <img src="images/client.png" alt="">
               <h4>John Sasmal</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quos quasi accusantium commodi
                 vel! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi perspiciatis libero expedita.
@@ -169,7 +169,7 @@
           </div>
           <div class="swiper-slide">
             <div class="testimonial-card">
-              <img src="./public/images/client.png" alt="">
+              <img src="images/client.png" alt="">
               <h4>Chandranath</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quos quasi accusantium commodi
                 vel! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis, nihil iste.</p>
@@ -209,12 +209,13 @@
       <span>Follow Us</span>
 
       <div class="social-icon-box">
-        <img src="./public/images/fb.png" alt="">
-        <img src="./public/images/linkedin.png" alt="">
-        <img src="./public/images/instagram.png" alt="">
-        <img src="./public/images/twitter.png" alt="">
+        <img src="images/fb.png" alt="">
+        <img src="images/linkedin.png" alt="">
+        <img src="images/instagram.png" alt="">
+        <img src="images/twitter.png" alt="">
       </div>
     </div>
+
 
 
     <p class="cpy-right">All rights reserved 2025(demo)</p>
