--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 
       <div class="nav-links-box ">
         <ul class="desktop-menu">
-          <li><a href="#" class="nav-link change-nav-link-color">Home</a></li>
-          <li><a href="#" class="nav-link">Fruits</a></li>
-          <li><a href="#" class="nav-link">Services</a></li>
-          <li><a href="#" class="nav-link">Contact us</a></li>
+          <li><a href="/" class="nav-link change-nav-link-color">Home</a></li>
+          <li><a href="#fruit-buying-section" class="nav-link">Fruits</a></li>
+          <li><a href="#our-services" class="nav-link">Services</a></li>
+          <li><a href="#contact-us" class="nav-link">Contact us</a></li>
         </ul>
       </div>
 
@@ -66,10 +66,10 @@
       </a>
 
       <ul class="mobile-menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Fruits</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact us</a></li>
+        <li><a href="/" class="change-nav-link-color">Home</a></li>
+        <li><a href="#fruit-buying-section">Fruits</a></li>
+        <li><a href="#our-services">Services</a></li>
+        <li><a href="#contact-us">Contact us</a></li>
       </ul>
 
     </nav>
